--- a/home.ejs
+++ b/home.ejs
@@ -1,2 +1,15 @@
-<label for="Input" id="Input"></label>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <%=count%>
+    <form methode="POST" action='/register'>
+    <input type="text" class="form" name="name" placeholder="userName">
 <button id="btn">email</button>
+</form>
+</body>
+</html>
